# rs-collector

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  CRUSH.md  Cargo.toml  FINAL_SUMMARY.md  PERFORMANCE.md  PRODUCTION_READINESS_ISSUES.md  PRODUCTION_READINESS_ISSUES_UPDATED.md  PRODUCTION_READINESS_SUMMARY.md  README.md  SECURITY.md  SECURITY_AUDIT.md  build.rs  build.sh  build_macos.sh  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  cross-platform-build.yml  docs.yml  features.yml  release.yml  rs-collector-build.yml  security.yml
benches/: bodyfile_bench.rs  collector_bench.rs  compression_bench.rs  hash_bench.rs  path_validation_bench.rs
config/: default_config.yaml  default_linux_config.yaml  default_macos_config.yaml  default_windows_config.yaml
docs/: CODE_REVIEW.md  IMPLEMENTATION.md  MEMORY_IMPLEMENTATION.md  WINDOWS_IMPLEMENTATION.md
examples/: README.md  custom_config.yaml  regex_config.yaml  test_config.sh
scripts/: README.md  delete-all-runs.sh  delete-workflow-runs.sh  force-delete-all-runs.sh  manage-workflow-runs.sh  perf_test.sh
src/: build.rs  cli.rs  constants.rs  lib.rs  main.rs  models.rs
src/cloud/: client.rs  mod.rs  s3.rs  sftp.rs  sftp_streaming.rs  streaming.rs  streaming_target.rs
src/collectors/: collector.rs  mod.rs  permission_tracker.rs  streaming_facade.rs
src/collectors/memory/: collector.rs  export.rs  filters.rs  mod.rs  models.rs
src/collectors/memory/memprocfs/: collector.rs  helpers.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/collectors/regex/: collector.rs  helpers.rs  mod.rs  walker.rs
src/collectors/streaming/: core.rs  mod.rs  s3.rs  sftp.rs
src/collectors/volatile/: collector.rs  mod.rs  models.rs
src/config/: artifact_types.rs  collection_config.rs  default_configs.rs  env_vars.rs  mod.rs  regex_config.rs
src/privileges/: linux.rs  macos.rs  mod.rs  windows.rs
src/security/: config.rs  credential_scrubber.rs  mod.rs  path_validator.rs
src/test_utils/: mod.rs
src/utils/: bodyfile.rs  compress.rs  hash.rs  mod.rs  summary.rs
src/utils/streaming_zip/: formats.rs  helpers.rs  mod.rs  writer.rs
src/windows/: mock_impl.rs  mod.rs  privileges.rs
src/windows/raw_access/: directory.rs  file_access.rs  mod.rs  utils.rs
tests/: basic_collection.rs  cloud_upload_tests.rs  compression_tests.rs  full_collection_tests.rs  full_collection_tests.rs.disabled  memory_collection_tests.rs  mod.rs  streaming_tests.rs
