[package]
name = "rust_collector"
version = "0.3.0"
edition = "2021"
description = "Cross-platform DFIR triage collector tool"
authors = ["Your Name <your.email@example.com>"]

[features]
default = []
embed_config = []
memory_collection = ["memprocfs", "pretty-hex"]  # Unified memory collection feature
macos_memory = ["memory_collection"]             # For backward compatibility
windows_memory = ["memory_collection"]           # For backward compatibility
linux_memory = ["memory_collection"]             # For backward compatibility
yara = ["memory_collection", "yara-sys"]         # Optional YARA scanning support

[dependencies]
anyhow = "1.0"
bodyfile = "0.1.0"
chrono = "0.4"
sha2 = "0.10.6"
rayon = "1.7.0"
clap = { version = "4.1", features = ["derive"] }
hostname = "0.3"
log = "0.4"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
rusoto_credential = "0.48"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
async-compression = { version = "0.3", features = ["tokio", "deflate", "zlib"] }
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = "0.12"
ssh2 = "0.9"
tokio = { version = "1.27", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "macros", "io-util"] }
uuid = { version = "1.3", features = ["v4"] }
walkdir = "2.3"
widestring = "1.0"
winapi = { version = "0.3", features = [
    "basetsd", "errhandlingapi", "fileapi", "handleapi", "minwindef", 
    "processthreadsapi", "securitybaseapi", "winbase", "winnt", "minwinbase", 
    "wincrypt", "winerror", "ntdef", "sysinfoapi", "timezoneapi", 
    "memoryapi", "ioapiset", "synchapi"
]}
zip = "0.6"
include_dir = "0.7"
num_cpus = "1.15"
futures = "0.3"
crossbeam = "0.8"
zstd = "0.12"
async-trait = "0.1"
libc = "0.2"
sysinfo = "0.29.10"  # For volatile data collection
regex = "1.9.5"      # For regex-based artifact collection
memprocfs = { version = "5.14", optional = true }  # For process memory collection
mach-sys = { version = "0.5", optional = true }    # For macOS memory collection (legacy)
pretty-hex = { version = "0.3.0", optional = true } # For memory dump formatting
yara-sys = { version = "0.1", optional = true }    # For YARA scanning support
